# vfs

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  conanfile.py
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint.cmake  prelude.cmake  spell.cmake  variables.cmake
docs/: STYLE.md
include/vfs/: file_operation_results.hpp  path.hpp  path_fwd.hpp  provider.hpp  provider_fwd.hpp  vfs.hpp  virtual_file_system.hpp  virtual_file_system_fwd.hpp
include/vfs/providers/: local_filesystem_provider.hpp
source/vfs/: path.cpp  vfs.cpp  virtual_file_system.cpp
source/vfs/providers/: local_filesystem_provider.cpp
test/: CMakeLists.txt
test/source/: path_test.cpp  vfs_test.cpp
